fix: footer tool bar support dark mode

--- a/src/components/footer-tool-bar/index.less
+++ b/src/components/footer-tool-bar/index.less
@@ -10,9 +10,9 @@
   height: 56px;
   padding: 0 24px;
   line-height: 56px;
-  background: #fff;
-  box-shadow: 0 -1px 2px rgb(0 0 0 / 3%);
-  border-top: 1px solid #e8e8e8;
+  background: var(--bg-color);
+  box-shadow: var(--c-shadow);
+  //border-top: 1px solid #e8e8e8;
 
   &::after {
     display: block;
